package l3s6.projet.star.gui;

public class ImageNotFoundException extends Exception{
    public ImageNotFoundException(String message) {
        super(message);
    }
}
