package l3s6.projet.star.gui.board;

import l3s6.projet.star.game.board.Coordinates;

public interface TileClickListener {
    
    public void clicked(Coordinates coords);

}
